--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,5 +5,8 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
+    - uses: swift-actions/setup-swift@v2
+      with:
+        swift-version: "5.9"
     - name: Run tests
       run: swift test -v
