--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,5 +8,7 @@ jobs:
     - uses: swift-actions/setup-swift@v2
       with:
         swift-version: "5.10"
-    - name: Run tests
-      run: swift test -v
+    - name: Run unit tests
+      run: swift test --filter "^(?!.*\bIntegrationTests\b).*" -v
+    - name: Run integration tests
+      run: swift test --filter IntegrationTests -v
