--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,10 +9,10 @@ jobs:
         swift: ["5.10", "6.0"]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: swift-actions/setup-swift@v2
+      - uses: NeedleInAJayStack/setup-swift@4e17dcd69a660eea371d715802c219601e76f50a  #  swift-actions/setup-swift@v2 waiting for https://github.com/swift-actions/setup-swift/pull/684
         with:
           swift-version: ${{ matrix.swift }}
+      - uses: actions/checkout@v4
       - name: Build
         run: swift build --build-tests
       - name: Run unit tests
