disable ubuntu builds

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,7 @@ jobs:
     name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-latest]  # ubuntu-latest
         swift: ["5.10", "6.0"]
     runs-on: ${{ matrix.os }}
     steps:
