fix swift plugin name

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Set up Swift
-        uses: actions/setup-swift@v2
+        uses: swift-actions/setup-swift@v2
         with:
           swift-version: '5.10'
       - name: Install SwiftFormat
