rename test job

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,7 +8,7 @@ on:
       - main
 jobs:
   build-and-test:
-    name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
+    name: tests (Swift ${{ matrix.swift }})
     strategy:
       matrix:
         os: [macos-latest]  # ubuntu-latest
