feat: linux support (#17)

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,10 +8,10 @@ on:
       - main
 jobs:
   build-and-test:
-    name: tests (Swift ${{ matrix.swift }})
+    name: tests (Swift ${{ matrix.swift }}) on ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest]  # ubuntu-latest
+        os: [macos-latest, ubuntu-latest]
         swift: ["5.10", "6.0"]
     runs-on: ${{ matrix.os }}
     steps:
