project: synchonize semantic pr names

--- a/.github/workflows/semantic-pr-lint.yml
+++ b/.github/workflows/semantic-pr-lint.yml
@@ -19,3 +19,16 @@ jobs:
       - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          types: |
+            fix
+            feat
+            chore
+            feat
+            fix
+            test
+            perf
+            refactor
+            doc
+            project
+            revert
