tune project format command

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -3,7 +3,8 @@
     "Swift": {
       "formatter": {
         "external": {
-          "command": "swiftformat"
+          "command": "swiftformat",
+          "arguments": ["--stdinpath", "{buffer_path}"]
         }
       }
     }
