test version check

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -34,6 +34,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: kattouf/sake-action@main
+        with:
+          sake-version: '0.2.3'
       - name: Run lint
         run: |
           sake lint
