test version check

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -35,7 +35,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: kattouf/sake-action@main
         with:
-          ubi-version: '0.2.9'
+          sake-version: '0.2.4'
+          ubi-version: '0.3.0'
       - name: Run lint
         run: |
           sake lint
