--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,7 +15,8 @@ jobs:
         swift: ["5.10", "6.0"]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Setup Sake
         uses: kattouf/sake-action@main
         with:
@@ -31,8 +32,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Sake
         uses: kattouf/sake-action@main
-        with:
-          swift-version: ${{ matrix.swift }}
       - name: Run lint
         run: |
           sake lint
