--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Setup Sake
+        id: setup-sake
         uses: kattouf/sake-action@main
         with:
           swift-version: ${{ matrix.swift }}
