--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -25,11 +25,11 @@ jobs:
         with:
           swift-version: ${{ matrix.swift }}
       - name: Build tests
-        run: sake build_tests --sake-app-prebuilt-binary-path ${{ steps.setup-sake.outputs.sake_app_prebuilt_binary_path }}
+        run: sake build_tests
       - name: Run unit tests
-        run: sake unit_tests --sake-app-prebuilt-binary-path ${{ steps.setup-sake.outputs.sake_app_prebuilt_binary_path }}
+        run: sake unit_tests
       - name: Run integration tests
-        run: sake integration_tests --sake-app-prebuilt-binary-path ${{ steps.setup-sake.outputs.sake_app_prebuilt_binary_path }}
+        run: sake integration_tests
   lint:
     runs-on: macos-latest
     steps:
@@ -40,4 +40,4 @@ jobs:
         uses: kattouf/sake-action@main
       - name: Run lint
         run: |
-          sake lint --sake-app-prebuilt-binary-path ${{ steps.setup-sake.outputs.sake_app_prebuilt_binary_path }}
+          sake lint
