--- a/mise.toml
+++ b/mise.toml
@@ -1,6 +1,6 @@
 [tools]
 "swiftformat" = "0.55.3"
-"spm:cpisciotta/xcbeautify" = "2.11.0"
+"xcbeautify" = "2.11.0"
 "gh" = "2.58.0"
 "git-cliff" = "2.6.1"
 
