--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -40,7 +40,7 @@ jobs:
         uses: ./.github/actions/setup-environment
         with:
           mise-version: ${{ env.MISE_VERSION }}
-          swift-version: ${{ matrix.swift }}
+          swift-version: 6.0
       - name: Run lint
         run: |
           sake lint
