--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -15,7 +15,7 @@ runs:
       with:
         version: ${{ inputs.mise-version }}
         install: false
-    - uses: NeedleInAJayStack/setup-swift@4e17dcd69a660eea371d715802c219601e76f50a
+    - uses: swift-actions/setup-swift@v2
       with:
         swift-version: ${{ inputs.swift-version }}
     - name: Setup Sake
