--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,4 +22,5 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           files: coverage.lcov
+          fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
