--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest]
-        swift: ["5.10", "6.0"]
+        swift: ["6.1"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
