--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,6 +13,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - uses: swift-actions/setup-swift@v2
+        with:
+          swift-version: 6.1
+
       - name: Run tests with coverage
         run: |
           swift test --enable-code-coverage
