update setup-swift github action provider

--- a/.github/actions/setup-environment/action.yml
+++ b/.github/actions/setup-environment/action.yml
@@ -15,7 +15,7 @@ runs:
       with:
         version: ${{ inputs.mise-version }}
         install: false
-    - uses: swift-actions/setup-swift@v2
+    - uses: SwiftyLab/setup-swift@latest
       with:
         swift-version: ${{ inputs.swift-version }}
     - name: Setup Sake
