add .claude to gitgignoe

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ DerivedData/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
+.claude
 
 TODO.md
