--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest]
-        swift: ["6.1"]
+        swift: ["6.1", "6.2.1"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
@@ -40,7 +40,7 @@ jobs:
         uses: ./.github/actions/setup-environment
         with:
           mise-version: ${{ env.MISE_VERSION }}
-          swift-version: 6.1
+          swift-version: 6.2.1
       - name: Run lint
         run: |
           sake lint
